@@ -5,6 +5,7 @@ django-organizations
 0.1.3
 -----
 
+* Added configurable context variable names to view mixins
 * Added a base backend class which the Invitation and Registration backends extend
 
 0.1.2
